<resources>
    <string name="app_name">Taller 1</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_restart">Restart Game</string>
    <string name="action_new">New Game</string>
    <string name="action_cerrar">Close</string>

    <string name="nombre">Concentration Game</string>
    <string name="inicio">Play Game</string>
    <string name="inicio2">Play Multiplayer</string>

    <string name="jugador">Write your name: </string>
    <string name="puntaje">Points: </string>

    <string name="jugador1">Write name player 1: </string>
    <string name="jugador2">Write name player 2: </string>


    <string name="title_activity_unjugador">1 player</string>
    <string name="title_activity_dosjugadores">2 players</string>
    <string name="title_activity_tablero">Game</string>
    <string name="title_activity_about">About</string>

    <string name="dev">Development by: Alejandro Caballero Daza </string>
    <string name="email">Email: alejandrocaballerodaza@gmail.com</string>
    <string name="menu">Menu</string>
    <string name="title_activity_termino">Game Over</string>


</resources>
